--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,4 +3,9 @@ page-home {
         font-size: 64px;
         text-align: center;
     }
+
+    ion-card-subtitle{
+        color: grey;
+        text-align: center;
+    }
 }
